# deterministic-fractal-generator

./: CMakeLists.txt  main.cpp  type-a.cpp  type-b.cpp  type-c.cpp  type-d.cpp  variations.h
README/: README.tex
